syntax = "proto3";

// generated에 생성되는 패키지 경로
option java_package = "kr.co.velnova.grpc.helloworld";
// proto에 정의한 service, message 등을 개별 파일들로 만들어준다.
option java_multiple_files = true;
// client에서 호출할 패키지명
package hello;

service HelloService {
  rpc HelloWorld(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string first_name = 1;
  string last_name = 2;
}
message HelloResponse {
  string message = 1;
}